<!-- File: res/layout/activity_event_management.xml -->
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".eventmanagement.EventManagementActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/purple_200"
            app:title="@string/event_management"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <!-- Hauptinhalt hier -->
        <FrameLayout
            android:id="@+id/content_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_events"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"
                tools:listitem="@layout/item_event" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_add_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="16dp"
                android:src="@android:drawable/ic_input_add"
                app:backgroundTint="@color/purple_200"
                android:contentDescription="@string/add_event" />

            <TextView
                android:id="@+id/text_view_no_events"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_events"
                android:gravity="center"
                android:visibility="gone"
                android:padding="16dp" />

        </FrameLayout>

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/main_menu" />

</androidx.drawerlayout.widget.DrawerLayout>